#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Development

- Unbind =C-a= in =corfu-map=. This binding is only needed in modes which override
  =C-a= instead of remapping ~move-beginning-of-line~.
- Unbind =<tab>= in ~corfu-map~. This binding is only needed in modes which bind
  =<tab>= instead of =TAB=, as was the case in old versions of Org. If you use such
  a mode, please report this as a bug for this mode. In the meantime you can use
  =(keymap-set corfu-map "<tab>" #'corfu-complete)=.
- Add new command ~corfu-send~ as alternative to ~corfu-insert~.

* Version 1.4 (2024-05-23)

- ~corfu-auto-commands~: Add ~delete-backward-char~.

* Version 1.3 (2024-04-05)

- Preserve currently selected candidate on further input. This matters if
  candidate preview is disabled (~corfu-preview-current=nil~).
- Add new command ~corfu-expand~ bound to ~M-TAB~ by default. The command expands
  the input via ~completion-try-completion~, for example the ~basic~ completion
  style expands the common prefix of all candidates.

* Version 1.2 (2024-01-23)

- Support the EXWM window manager.
- Optimization: Reduce auto completion timer overhead.
- Use ~internal-border-width~ instead of ~child-frame-border-width~.
- Internal refactoring: Do not use buffer-local variables.
- Internal refactoring: Store ~completion-extra-properties~ as part of
  ~completion-in-region--data~.

* Version 1.1 (2023-12-27)

- Deduplicate candidates with respect to ~equal-including-properties~, such that
  backends can provide equal candidate strings, which only differ in their text
  properties and annotations.
- Ensure that the string passed to the ~:exit-function~ retains the candidate
  properties, when possible. The properties are guaranteed to exist when a
  candidate is selected explicitly, but may be missing when candidates are
  completed in a stepwise manner.
- ~corfu-on-exact-match~: Add value ~show~ to the customization option. With this